--- a/node-mysql-crud-app/package.json
+++ b/node-mysql-crud-app/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
+    "express-layout": "^0.1.0",
     "mysql": "^2.16.0",
     "pkg": "^4.3.4",
     "req-flash": "0.0.3"
