--- a/node-mysql-crud-app/package.json
+++ b/node-mysql-crud-app/package.json
@@ -23,6 +23,7 @@
     "express-fileupload": "^1.0.0",
     "express-layout": "^0.1.0",
     "mysql": "^2.16.0",
+    "php": "0.0.1",
     "pkg": "^4.3.4",
     "req-flash": "0.0.3"
   }
